--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
+Flask-Cors==5.0.0
 h11==0.14.0
 idna==3.10
 itsdangerous==2.2.0
